# Poseidon

./: .gitignore  ARCHITECTURE.md  Anchor.toml  DEMO_VIDEO_SCRIPT.md  FINAL_CHECKLIST.md  FORUM_POST.md  MORNING_GAMEPLAN.md  PRD.md  README.md  SUBMISSION.md  package-lock.json  package.json
.github/workflows/: deploy-native.yml
agent/: .env.example  package.json  pnpm-lock.yaml  register-compdefs.ts  test-mxe-devnet.ts  tsconfig.json
agent/docs/: meteora-pool-types.md
agent/src/: index.ts
agent/src/api/: server.ts
agent/src/core/: activity-tracker.ts  aggregator.ts  ai-reasoner.ts  fee-collector.ts  index.ts  migration-analyzer.ts  position-monitor.ts  price-oracle.ts  reasoning-logger.ts  rebalance-registry.ts  (+1 more)
arcium/: README.md  RESEARCH.md  SETUP.md
arcium/mxe-program/: Anchor.toml  Arcium.toml  Cargo.toml
arcium/mxe-program/programs/poseidon_privacy/: Cargo.toml
arcium/mxe-program/programs/poseidon_privacy/src/: lib.rs
arcium/src/: arcium-provider.ts  crypto.ts  index.ts  mxe-client.ts
frontend/: UI_REDESIGN_SUMMARY.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
mobile/: App.tsx  app.json  eas.json  index.ts  package-lock.json  package.json  react-native.config.js  tsconfig.json
mobile/plugins/: withSolanaMWA.js
mobile/scripts/: patch-mwa.js
programs/poseidon-native/: Cargo.toml
programs/poseidon-rebalance/: Cargo.toml
programs/poseidon-rebalance/src/: lib.rs
programs/tests/: rebalance-devnet-test.ts
research/: arcium-integration.md  meteora-sdk.md  orca-sdk.md  raydium-sdk.md
(+96 files in other folders)
