[package]
name = "poseidon-rebalance"
version = "0.1.0"
description = "Poseidon auto-rebalance opt-in program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poseidon_rebalance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
