[package]
name = "poseidon-privacy"
version = "0.1.0"
description = "Poseidon LP Vault Privacy Layer - Arcium MXE Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poseidon_privacy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = { version = "0.8" }
arcium-client = { version = "0.8", default-features = false }
arcium-macros = { version = "0.8" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
